# charpx

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
archive/pixdot/: CLAUDE.md  DESIGN.md  README.md  pyproject.toml
archive/pixdot/examples/: README.md  ai_recipes.py  framebuffer_demo.py  graphing_calculator.py  realtime_monitor.py  stats_dashboard.py
archive/pixdot/pixdot/: __init__.py  ansi.py  braille.py  claude_cli.py  config.py  image_cli.py  pixdot.py  preprocess.py  resize.py
archive/pixdot/pixdot/adapters/: __init__.py  base.py  cairo.py  matplotlib.py  numpy_adapter.py  pil.py
archive/pixdot/tests/: __init__.py  test_adapters.py  test_ansi.py  test_config.py  test_examples.py  test_pixdot.py  test_pixdot_class.py  test_resize.py
blog/: charpx.md  fplot.md  how-terminal-characters-encode-pixels.md  terminal-graphics-ai-age.md  viewers-and-creators.md
blog-archive/: _index.md  cli-native-tongue.md  one-canvas-seven-renderers.md  preprocessing.md
blog-archive/archive/: charpx.md
blog/archive/: fplot.md  pixblock.md
charpx/: __init__.py  auto.py  canvas.py  cli.py  preprocess.py
charpx/adapters/: __init__.py  ansi.py  cairo.py  matplotlib.py  numpy.py  pil.py
charpx/renderers/: __init__.py  ascii.py  braille.py  fingerprint.py  kitty.py  quadrants.py  sextants.py  sixel.py
dapple/: __init__.py  auto.py  canvas.py  cli.py  color.py  preprocess.py
dapple/adapters/: __init__.py  ansi.py  cairo.py  matplotlib.py  numpy.py  pil.py
dapple/extras/: __init__.py  common.py
dapple/extras/csvcat/: __init__.py  cli.py  csvcat.py
dapple/extras/datacat/: __init__.py  cli.py  datacat.py
dapple/extras/funcat/: __init__.py  funcat.py
dapple/extras/imgcat/: __init__.py  imgcat.py
dapple/extras/mdcat/: __init__.py  mdcat.py
dapple/extras/pdfcat/: __init__.py  pdfcat.py
dapple/extras/vidcat/: __init__.py  vidcat.py
dapple/extras/vizlib/: __init__.py  charts.py  colors.py  render.py
dapple/renderers/: __init__.py  ascii.py  braille.py  fingerprint.py  kitty.py  quadrants.py  sextants.py  sixel.py
docs/: getting-started.md  index.md
docs/blog/: encodings-and-preprocessing.md  index.md  one-canvas-seven-renderers.md  terminal-graphics-ai-age.md  viewers-and-creators.md
docs/concepts/: design-patterns.md  philosophy.md
docs/guide/: adapters.md  auto-detection.md  canvas.md  encodings.md  preprocessing.md  renderers.md
docs/reference/: index.md
docs/tools/: csvcat.md  datacat.md  funcat.md  imgcat.md  index.md  mdcat.md  pdfcat.md  vidcat.md  vizlib.md
examples/: config.json  demo.sh  metrics.jsonl  sales.tsv  sample.csv
extras/: __init__.py
extras/chop/: CLAUDE.md  README.md  pyproject.toml
extras/chop/chop/: __init__.py  cli.py  operations.py  output.py  pipeline.py  render.py
extras/chop/tests/: __init__.py  test_chop.py
extras/fplot/: README.md  __init__.py  fplot.py  pyproject.toml
extras/imgcat/: README.md  pyproject.toml
extras/imgcat/imgcat/: __init__.py  imgcat.py
extras/mdcat/: README.md  pyproject.toml
extras/mdcat/mdcat/: __init__.py  mdcat.py
extras/pdfcat/: CLAUDE.md  README.md  pyproject.toml
extras/pdfcat/pdfcat/: __init__.py  pdfcat.py
extras/vidcat/: README.md  pyproject.toml
extras/vidcat/tests/: __init__.py  test_vidcat.py
extras/vidcat/vidcat/: __init__.py  vidcat.py
tests/: __init__.py  test_adapters.py  test_ansi_adapter.py  test_auto.py  test_canvas.py  test_cli.py  test_color.py  test_csvcat.py  test_datacat.py  test_extras_common.py  test_fplot.py  test_funcat.py  test_imgcat.py  test_mdcat.py  test_pdfcat.py  test_renderers.py  test_vidcat.py  test_vizlib.py
