[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dapple"
version = "0.5.0"
description = "Unified terminal graphics library - render bitmaps to braille, blocks, ASCII, sixel, and kitty"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "spinoza"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Terminals",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
# Adapters for various image sources
adapters = [
    "pillow>=9.0",
    "matplotlib>=3.5",
]
# Tools (each group provides the dependencies needed for that extra)
imgcat = ["pillow>=9.0"]
funcat = []
pdfcat = ["pillow>=9.0", "pypdfium2>=4.0"]
mdcat = ["pillow>=9.0", "rich>=13.0"]
vidcat = ["pillow>=9.0"]
vizlib = []
csvcat = []
datacat = []
# Bundles
all-tools = ["dapple[imgcat,funcat,pdfcat,mdcat,vidcat,csvcat,datacat]"]
# Development
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "dapple[all-tools,adapters]",
]
# Everything
all = [
    "dapple[all-tools,adapters,dev]",
]

[project.urls]
Homepage = "https://github.com/spinoza/dapple"
Repository = "https://github.com/spinoza/dapple"

[project.scripts]
imgcat = "dapple.extras.imgcat.imgcat:main"
funcat = "dapple.extras.funcat.funcat:main"
pdfcat = "dapple.extras.pdfcat.pdfcat:main"
mdcat = "dapple.extras.mdcat.mdcat:main"
vidcat = "dapple.extras.vidcat.vidcat:main"
csvcat = "dapple.extras.csvcat.cli:main"
datacat = "dapple.extras.datacat.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dapple*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["dapple"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
