[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdcat"
version = "0.1.0"
description = "Terminal markdown viewer with inline images built on dapple"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "spinoza"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Terminals",
]
requires-python = ">=3.10"
dependencies = [
    "dapple>=0.1.0",
    "pillow>=9.0",
    "rich>=13.0",
]

[project.scripts]
mdcat = "mdcat.mdcat:main"

[project.urls]
Homepage = "https://github.com/spinoza/dapple"
Repository = "https://github.com/spinoza/dapple"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdcat*"]
